--- a/ToDoList/src/App.css
+++ b/ToDoList/src/App.css
@@ -2,9 +2,10 @@
   display: flex;
   align-items: center;
   margin-bottom: 8px;
+  
 }
 
-.completed {
+.todo-text.completed{
   text-decoration: line-through;
   color: grey;
 }
@@ -17,4 +18,7 @@ button {
 
 input[type="checkbox"] {
   margin-right: 10px;
-}
+  
+
+} 
+
