--- a/ToDoList/src/App.css
+++ b/ToDoList/src/App.css
@@ -41,5 +41,8 @@ h1{
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
+.todo-text.completed {
+  text-decoration: line-through;
+}
 
 
